Fix application data directory permissions